--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,13 @@
 <h1>Create a new article</h1>
+<% if @article.errors.any? %>
+<h2>These are the reasons prevented your article being created</h2>
+<ul>  
+    <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+</ul>
+<% end %>
+
 
 <%= form_for @article do |f| %>
     <p>
@@ -12,5 +21,5 @@
     <p>
         <%= f.submit %>
     </p>
-
+    
 <% end %>
