add edit, update and show listing

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,3 +5,6 @@
 <p>
     Descripton: <%= @article.description %>
 </p>
+
+<p><%= link_to "Edit this article", edit_article_path(@article) %></p>
+<%= link_to "Go back to articles listing", articles_path %>
