--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a new article</h1>
+<h1>Edit Existing article</h1>
 <% if @article.errors.any? %>
 <h2>These are the reasons prevented your article being created</h2>
 <ul>  
